fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ img {
 }
 
 a:link, a:visited {
-    color: #270000; /* dark blue while idle */
+    color: #740000; /* dark blue while idle */
     text-decoration: none;
     font-weight: bold;
 }
